First draft of lectures04 and 05

--- a/website/guides/getting_started.qmd
+++ b/website/guides/getting_started.qmd
@@ -11,7 +11,7 @@ This page contains information
 
 
 ## Computing (R & RStudio)
-:::{#prereq-warning .callout-important}
+:::{.callout-important}
 
 ## Warning
 
@@ -27,7 +27,7 @@ If you do **not** meet the formal course prerequisites and/or have not used R in
 
 ### Additional R resources
 
-Having issued that warning @prereq-warning, you will see some new R functionality in the course.
+Having issued that warning, you will see some new R functionality in the course.
 As the focus is on answer sports problems, we will not spend significant classtime going over new functions, packages, or techniques.
 If you find that there are gaps in your R knowledge, you are expected to fill them on your own time.
 Here are some helpful resources
