--- a/website/lectures/stat479_refs.bib
+++ b/website/lectures/stat479_refs.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Sameer Deshpande at 2025-08-07 12:46:20 -0500 
+%% Created for Sameer Deshpande at 2025-08-12 20:06:40 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{DeshpandeJense2016,
+	author = {Sameer K. Deshpande and Shane T. Jensen},
+	date-added = {2025-08-12 20:05:38 -0500},
+	date-modified = {2025-08-12 20:06:40 -0500},
+	journal = {Journal of Quantitative Analysis in Sports},
+	number = {2},
+	pages = {51--72},
+	title = {Estimating an {NBA} player's impact on his team's chances of winning},
+	volume = {12},
+	year = {2016}}
 
 @article{Yurko2019_nflWAR,
 	author = {Ronald Yurko and Samuel Ventura and Maksim Horowitz},
