--- a/website/lectures/stat479_refs.bib
+++ b/website/lectures/stat479_refs.bib
@@ -1,17 +1,17 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Sameer Deshpande at 2025-08-12 20:06:40 -0500 
+%% Created for Sameer Deshpande at 2025-08-12 20:22:30 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{DeshpandeJense2016,
+@article{DeshpandeJensen2016,
 	author = {Sameer K. Deshpande and Shane T. Jensen},
 	date-added = {2025-08-12 20:05:38 -0500},
-	date-modified = {2025-08-12 20:06:40 -0500},
+	date-modified = {2025-08-12 20:22:29 -0500},
 	journal = {Journal of Quantitative Analysis in Sports},
 	number = {2},
 	pages = {51--72},
