--- a/website/lectures/lecture10.qmd
+++ b/website/lectures/lecture10.qmd
@@ -8,6 +8,44 @@ execute:
 
 ## Recap & Overview
 
+[In Lecture 9](lecture09.qmd).
+
+
+Let's look at the two touchdown plays
+
+How much credit should be assign to the quarterback and how much credit should we assign to the receiver?
+In both cases, the receiver
+
+Effectively, we can treat a single passing play in two phases.
+Thus `epa_air` is the change in EP between the start of the play and the moment the ball is caught and `epa_yac` is the change in EP between the moment the ball is caught and 
+
+So, on the two passing plays from before[^id], we have
+
+
+
+[^id]: I manually search for the `play_id` and `game_id` for these plays.
+
+As we saw with our baseball analysis, it is not completely reasonable to give the quarterback all the credit for `epa_air` and the receiver all the credit for `epa_yac`.
+
+
+<!--
+
+  Start with a single play: how do we give credit? obviously, the quarterback made the pass, the receiver caught
+  
+  Is the running back's contribution more or less valuable than the 
+  
+  Over the next two lectures, we will
+  
+  
+  Like with our other sports, we will first estimate the value of different game states. Whereas in baseball this was defined using the number of outs and baserunners, in football it is primarily based on the yardline, yards to gain (i.e., down & distance) and other contextual factors.
+  
+  Then, we will look at how much the expected value changes over the course of a single play.
+  
+  Before allocating credit, we need to introduce a new type of model, which can properly account for the complicated dependence structure and avoid small sample size issues.
+
+  We have so far looked at apportioning credit: 
+-->
+
 Last lecture, we introduce two-level models.
 
 Our plan will be to compute the player's average effect (their "individual points added (iPA)") for three different types of offensive production: rushing players, passing plays (air yards), and passing plays (yards after catch)
@@ -20,6 +58,10 @@ Our plan will be to compute the player's average effect (their "individual point
 
 ## Rushing Model
 
+We now turn to running plays
+
+
+
 ## Individual Points Above Average & Replacement Level
 
 ### Computing a player's iPAA
@@ -28,8 +70,8 @@ Our plan will be to compute the player's average effect (their "individual point
   For non-QB; k_{p,pass} number of targets, p_{p,rush} is number of rush attempts
 
 Summing over all three components gives player p's individual points added above average, iPAA_{p}
-
 -->
+
 ### Position-specific replacement levels
 
 
@@ -39,22 +81,6 @@ Summing over all three components gives player p's individual points added above
 <!--
   For each team, let us regress the number of wins onto the score differential
   1/hat{beta} is the number of points per win.; take iPAR and divide by esimated points per win (i.e., multiply iPAR by beta)
--->
-
-<!--
-  Do a QB only model. We could fit a linaer model only to the data for QB 1; we can then look at the intercepts across players
-  Level 2: asserts that in fact each alpha_i = alpha_0 + u_i 
-
-  Fixed effects are the unknown population effects associated with certain covariates; in the case of an intercept only mode
-  The individual alpha_i's serve to conceptually link Level 1 and Lever 2.
-  Together, we can write this as a composite model
-
-  random effects descrie levels of a factor that can be thought of a sample from a larger population of factor levels. 
-
-  Useful to always start with a random intercept model.
-  compare estimated variacne in within-person deviations to variance in between-person deviations. This gives rise to an intraclass correlation coefficient
-
-
 -->
 
 
