Nearly finish lecture 10

--- a/website/lectures/lecture08.qmd
+++ b/website/lectures/lecture08.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Lecture 8: Defensive creidt & replacement level"
+title: "Lecture 8: Defensive credit & replacement level"
 format: html
 execute: 
   cache: true
